setup instrument model with the user model

--- a/app/views/instruments/_profile.html.erb
+++ b/app/views/instruments/_profile.html.erb
@@ -1,15 +1,12 @@
-<p id="notice"><%= notice %></p>
-
 <div>
   <p style="display: inline"><%= current_user.name %>(@<%= current_user.username %>)</p>
-  <button style="display: inline"><%= link_to 'Edit User', edit_user_registration_path %></button>
   <button style="display: inline"><%= link_to 'Back', root_path %></button>
 </div>
 
 <br>
 
 <div>
-  <h3 style="display: inline">Your Shots</h3>
+  <h3 style="display: inline">Your Products</h3>
   <button style="display: inline"><%= link_to 'New Instrument', new_instrument_path %></button>
 </div>
 
