--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,8 +1,12 @@
-<% if current_user.nil? %>
-  <button><%= link_to 'Login', new_user_session_path %></button>
-  <button><%= link_to 'Register', new_user_registration_path %></button>
+<% if signed_in? %>
+
+    <%= button_to 'Logout', logout_path, method: :delete %>
+
+    <%= render 'profile' %>
+
+    <%= render 'feed' %>
+
 <% else %>
-
-  <%= render 'feed' %>
-
+      <%= button_to 'Login', login_path %>
+      <%= button_to 'Register', register_path %>
 <% end %>
